<resources>
    <string name="app_name">صرافی آنلاین</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_splash">نرم افزار تسک شرکت اپلیکا</string>
    <string name="dec_home1">مشاهده اخرین قیمت های امروز</string>

    //for data binding
    <string name="doller_format">قیمت دلار امروز :</string>
    <string name="home">خانه</string>
    <string name="arz">ارز</string>
    <string name="seke">سکه</string>
    <string name="car">خودرو</string>
    <string name="dec_home_2">صرافی ارزهای دیجیتال</string>
    <string name="update">بروز رسانی</string>
    <string name="dec_other_frag">برای تازه سازی دکمه بروزرسانی در صفحه نخست را بزنید</string>

    //info string
    <string name="info">فارغ التحصیل رشته برق دانشگاه شهید بهشتی و برنامه نویس اندروید . علاقه بسیار به همکاری با شرکت ها و پروژه های اندرویدی و مرتبط</string>
    <string name="instagram">مشاهده اینستاگرام</string>
    <string name="linkedin">مشاهده لینکدین</string>
    <string name="profile">پروفایل</string>

    //version
    <string name="version">version 1</string>
    <string name="nobitex_site">سایت نوبیتکس</string>
    <string name="dec_home_4">مرجع معتبر قیمت ارزهای دیجیتال</string>
</resources>